Add robust VersionedMessage implementation with support for Address Lookup Tables and serialization enhancements